--- a/templates/admin/adminnavbar.html
+++ b/templates/admin/adminnavbar.html
@@ -1,7 +1,7 @@
  <!-- Navigation-->
  <nav class="navbar navbar-expand-lg navbar-light bg-secondary fixed-top">
     <div class="container px-4 px-lg-5">
-        <a class="navbar-brand" href="#!">Bookies.com</a>
+        <a class="navbar-brand" href="#!">Bookiess</a>
     </div>
 </nav>
 <!-- Nav bar ends -->
