--- a/templates/admin/ordermanagement.html
+++ b/templates/admin/ordermanagement.html
@@ -19,7 +19,7 @@
 
         <div class="logo">
             <!-- <img src="/image/signup1.jpg" alt=""> -->
-            <h2 style="color: black;">Bookies.Com</h2>
+            <h2 style="color: black;">Bookiess</h2>
         </div>
 
         <div class="items">
