--- a/templates/admin/usermanagement.html
+++ b/templates/admin/usermanagement.html
@@ -18,7 +18,7 @@
     <section id="menu">
         <div class="logo">
             <!-- <img src="/image/signup1.jpg" alt=""> -->
-            <h2 style="color: black;">Bookies.Com</h2>
+            <h2 style="color: black;">Bookiess</h2>
         </div>
 
         <div class="items">
