--- a/templates/user/homepage.html
+++ b/templates/user/homepage.html
@@ -80,7 +80,7 @@
             <div class="container px-4 px-lg-5 my-5">
                
                 <div  class="text-center text-black">
-                    <h1 class="display-4 fw-bolder">Bookies.Com</h1>
+                    <h1 class="display-4 fw-bolder">Bookiess</h1>
                     <p class="lead fw-normal text-black-50 mb-0">Never put a fullstop for your reading</p>
                 </div>
             </div>
