--- a/templates/user/homepage.html
+++ b/templates/user/homepage.html
@@ -21,7 +21,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light bg-secondary fixed-top">
             <div class="container px-4 px-lg-5">
-                <a class="navbar-brand" href="{% url 'homepage' %}">Bookies.com</a>
+                <a class="navbar-brand" href="{% url 'homepage' %}">Bookiess</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
@@ -80,7 +80,7 @@
             <div class="container px-4 px-lg-5 my-5">
                
                 <div  class="text-center text-black">
-                    <h1 class="display-4 fw-bolder">Bookiess</h1>
+                    <h1 class="display-4 fw-bolder">Bookiess.shop</h1>
                     <p class="lead fw-normal text-black-50 mb-0">Never put a fullstop for your reading</p>
                 </div>
             </div>
